--- a/stand/forth/menu.rc
+++ b/stand/forth/menu.rc
@@ -29,32 +29,32 @@ menu-init     \ initialize the menu area (see `menu.4th')
 set menuset_name1="main"
 
 set mainmenu_init[1]="init_boot"
-set mainmenu_caption[1]="Boot Multi User [Enter]"
-set maintoggled_text[1]="Boot [S]ingle User [Enter]"
+set mainmenu_caption[1]="Boot Multi Utente [Enter]"
+set maintoggled_text[1]="Boot [S]ingolo Utente [Enter]"
 set mainmenu_command[1]="boot"
-set mainansi_caption[1]="^[1mB^[moot Multi User ^[1m[Enter]^[m"
-set maintoggled_ansi[1]="Boot ^[1mS^[mingle User ^[1m[Enter]^[m"
+set mainansi_caption[1]="^[1mB^[moot Multi Utete ^[1m[Enter]^[m"
+set maintoggled_ansi[1]="Boot ^[1mS^[mingolo Utente ^[1m[Enter]^[m"
 \ keycode set by init_boot
 
 set mainmenu_init[2]="init_altboot"
-set mainmenu_caption[2]="Boot [S]ingle User"
-set maintoggled_text[2]="Boot [M]ulti User"
+set mainmenu_caption[2]="Boot [S]ingolo Utente"
+set maintoggled_text[2]="Boot [M]ulti Utente"
 set mainmenu_command[2]="altboot"
-set mainansi_caption[2]="Boot ^[1mS^[mingle User"
-set maintoggled_ansi[2]="Boot ^[1mM^[multi User"
+set mainansi_caption[2]="Boot ^[1mS^[mingolo Utente"
+set maintoggled_ansi[2]="Boot ^[1mM^[multi Utente"
 \ keycode set by init_altboot
 
-set mainmenu_caption[3]="[Esc]ape to loader prompt"
+set mainmenu_caption[3]="[Esc]ape per andare al prompt"
 set mainmenu_command[3]="goto_prompt"
 set mainmenu_keycode[3]=27
-set mainansi_caption[3]="^[1mEsc^[mape to loader prompt"
+set mainansi_caption[3]="^[1mEsc^[mape per andare al prompt"
 
 \ Enable built-in "Reboot" trailing menuitem
 \ NOTE: appears before menu_options if configured
 \ 
 set mainmenu_reboot
 
-\ Enable "Options:" separator. When set to a numerical value (1-8), a visual
+\ Enable "Opzioni:" separator. When set to a numerical value (1-8), a visual
 \ separator is inserted before that menuitem number.
 \ 
 set mainmenu_options=5
@@ -63,16 +63,16 @@ set mainmenu_kernel=5
 set mainmenu_command[5]="cycle_kernel"
 set mainmenu_keycode[5]=107
 
-set mainmenu_caption[6]="Configure Boot [O]ptions..."
+set mainmenu_caption[6]="Configura [O]pzioni Boot..."
 set mainmenu_command[6]="2 goto_menu"
 set mainmenu_keycode[6]=111
-set mainansi_caption[6]="Configure Boot ^[1mO^[mptions..."
+set mainansi_caption[6]="Configure ^[1mO^[mpzioni Boot..."
 
 s" currdev" getenv dup 0> [if] drop 4 s" zfs:" compare 0= [if]
-    set mainmenu_caption[7]="Select Boot [E]nvironment..."
+    set mainmenu_caption[7]="Selezionare [E]nvironment Boot..."
     set mainmenu_command[7]="3 goto_menu"
     set mainmenu_keycode[7]=101
-    set mainansi_caption[7]="Select Boot ^[1mE^[37mnvironment..."
+    set mainansi_caption[7]="Select ^[1mE^[37mnvironment Boot..."
 
     s" chain_disk" getenv? [if]
 	set mainmenu_caption[8]="Chain[L]oad ${chain_disk}"
@@ -96,18 +96,18 @@ s" currdev" getenv dup 0> [if] drop 4 s" zfs:" compare 0= [if]
 
 set menuset_name2="options"
 
-set optionsmenu_caption[1]="Back to Main Menu [Backspace]"
+set optionsmenu_caption[1]="Ritorna al Menu Principale [Backspace]"
 set optionsmenu_command[1]="1 goto_menu"
 set optionsmenu_keycode[1]=8
-set optionsansi_caption[1]="Back to Main Menu ^[1m[Backspace]^[m"
+set optionsansi_caption[1]="Ritorna al Menu Principale ^[1m[Backspace]^[m"
 
-set optionsmenu_caption[2]="Load System [D]efaults"
+set optionsmenu_caption[2]="Carica Impostazioni [D]efault"
 set optionsmenu_command[2]="set_default_boot_options"
 set optionsmenu_keycode[2]=100
-set optionsansi_caption[2]="Load System ^[1mD^[mefaults"
+set optionsansi_caption[2]="Carica Impostazioni ^[1mD^[mefault"
 
 set optionsmenu_options=3
-set optionsmenu_optionstext="Boot Options:"
+set optionsmenu_optionstext="Opzioni Boot:"
 
 set optionsmenu_acpi=3
 set optionsmenu_caption[3]="[A]CPI Support off"
