--- a/stand/defaults/loader.conf
+++ b/stand/defaults/loader.conf
@@ -153,7 +153,8 @@ module_path="/boot/modules;/boot/dtb;/boot/dtb/overlays"	# Set the module search
 #module_error="cmd"		# executes "cmd" if load fails
 
 ### pfSense specific default values ##########################
-loader_color="NO"
+#loader_color="NO"
+loader_color="YES"
 loader_logo="pfSensebw"
 loader_brand="pfSense"
 hw.usb.no_pf="1"
