--- a/stand/defaults/loader.conf
+++ b/stand/defaults/loader.conf
@@ -9,7 +9,7 @@
 # $FreeBSD$
 
 ###  Basic configuration options  ############################
-exec="echo Loading /boot/defaults/loader.conf"
+exec="echo Caricando /boot/defaults/loader.conf"
 
 kernel="kernel"		# /boot sub-directory containing kernel and modules
 bootfile="kernel"	# Kernel name (possibly absolute path)
@@ -20,7 +20,7 @@ nextboot_enable="NO"
 verbose_loading="NO"		# Set to YES for verbose loader output
 
 ###  Splash screen configuration  ############################
-splash_bmp_load="NO"		# Set this to YES for bmp splash screen!
+
 splash_pcx_load="NO"		# Set this to YES for pcx splash screen!
 splash_txt_load="NO"		# Set this to YES for TheDraw splash screen!
 vesa_load="NO"			# Set this to YES to load the vesa module
@@ -152,10 +152,14 @@ module_path="/boot/modules;/boot/dtb;/boot/dtb/overlays"	# Set the module search
 #module_after="cmd"		# executes "cmd" after loading the module
 #module_error="cmd"		# executes "cmd" if load fails
 
-### pfSense specific default values ##########################
+### Firew4ll specific default values ##########################
 #loader_color="NO"
 loader_color="YES"
-loader_logo="pfSensebw"
-loader_brand="pfSense"
+#beastie_disable="YES"
+loader_logo="Firew4llbw"
+loader_brand="Firew4ll"
+splash_bmp_load="YES"		# Set this to YES for bmp splash screen!
+bitmap_load="YES"
+bitmap_name="/boot/splash.bmp"
 hw.usb.no_pf="1"
 net.isr.maxthreads="-1"
