--- a/stand/defaults/loader.conf
+++ b/stand/defaults/loader.conf
@@ -160,6 +160,6 @@ loader_logo="Firew4llbw"
 loader_brand="Firew4ll"
 splash_bmp_load="YES"		# Set this to YES for bmp splash screen!
 bitmap_load="YES"
-bitmap_name="/boot/splash.bmp"
+bitmap_name="/boot/Firew4ll.bmp"
 hw.usb.no_pf="1"
 net.isr.maxthreads="-1"
