--- a/stand/defaults/loader.conf
+++ b/stand/defaults/loader.conf
@@ -24,9 +24,9 @@ verbose_loading="NO"		# Set to YES for verbose loader output
 splash_pcx_load="NO"		# Set this to YES for pcx splash screen!
 splash_txt_load="NO"		# Set this to YES for TheDraw splash screen!
 vesa_load="NO"			# Set this to YES to load the vesa module
-bitmap_load="NO"		# Set this to YES if you want splash screen!
-bitmap_name="splash.bmp"	# Set this to the name of the file
-bitmap_type="splash_image_data" # and place it on the module_path
+#bitmap_load="NO"		# Set this to YES if you want splash screen!
+#bitmap_name="splash.bmp"	# Set this to the name of the file
+#bitmap_type="splash_image_data" # and place it on the module_path
 
 ###  Screen saver modules  ###################################
 # This is best done in rc.conf
