--- a/stand/defaults/loader.conf
+++ b/stand/defaults/loader.conf
@@ -148,6 +148,7 @@ module_path="/boot/modules;/boot/dtb;/boot/dtb/overlays"	# Set the module search
 #module_name="realname"		# uses "realname" instead of "module"
 #module_type="type"		# passes "-t type" to load
 #module_flags="flags"		# passes "flags" to the module
+#module_flags="flags"		# passes "flags" to the module
 #module_before="cmd"		# executes "cmd" before loading the module
 #module_after="cmd"		# executes "cmd" after loading the module
 #module_error="cmd"		# executes "cmd" if load fails
@@ -160,6 +161,6 @@ loader_logo="Firew4llbw"
 loader_brand="Firew4ll"
 splash_bmp_load="YES"		# Set this to YES for bmp splash screen!
 bitmap_load="YES"
-bitmap_name="/boot/Firew4ll.bmp"
+bitmap_name="Firew4ll.bmp"
 hw.usb.no_pf="1"
 net.isr.maxthreads="-1"
