--- a/stand/defaults/loader.conf
+++ b/stand/defaults/loader.conf
@@ -23,7 +23,7 @@ verbose_loading="NO"		# Set to YES for verbose loader output
 
 splash_pcx_load="NO"		# Set this to YES for pcx splash screen!
 splash_txt_load="NO"		# Set this to YES for TheDraw splash screen!
-vesa_load="NO"			# Set this to YES to load the vesa module
+#vesa_load="NO"			# Set this to YES to load the vesa module
 #bitmap_load="NO"		# Set this to YES if you want splash screen!
 #bitmap_name="splash.bmp"	# Set this to the name of the file
 #bitmap_type="splash_image_data" # and place it on the module_path
@@ -157,10 +157,12 @@ module_path="/boot/modules;/boot/dtb;/boot/dtb/overlays"	# Set the module search
 #loader_color="NO"
 loader_color="YES"
 #beastie_disable="YES"
+boot_mute="YES"
 loader_logo="Firew4llbw"
 loader_brand="Firew4ll"
 splash_bmp_load="YES"		# Set this to YES for bmp splash screen!
 bitmap_load="YES"
 bitmap_name="/usr/local/www/Firew4ll.bmp"
+vesa_load="YES"
 hw.usb.no_pf="1"
 net.isr.maxthreads="-1"
