--- a/stand/forth/menu.rc
+++ b/stand/forth/menu.rc
@@ -32,7 +32,7 @@ set mainmenu_init[1]="init_boot"
 set mainmenu_caption[1]="Boot Multi Utente [Enter]"
 set maintoggled_text[1]="Boot [S]ingolo Utente [Enter]"
 set mainmenu_command[1]="boot"
-set mainansi_caption[1]="^[1mB^[moot Multi Utete ^[1m[Enter]^[m"
+set mainansi_caption[1]="^[1mB^[moot Multi Utente ^[1m[Enter]^[m"
 set maintoggled_ansi[1]="Boot ^[1mS^[mingolo Utente ^[1m[Enter]^[m"
 \ keycode set by init_boot
 
@@ -69,10 +69,10 @@ set mainmenu_keycode[6]=111
 set mainansi_caption[6]="Configura ^[1mO^[mpzioni Boot..."
 
 s" currdev" getenv dup 0> [if] drop 4 s" zfs:" compare 0= [if]
-    set mainmenu_caption[7]="Selezionare [E]nvironment Boot..."
+    set mainmenu_caption[7]="Seleziona [A]mbiente Boot..."
     set mainmenu_command[7]="3 goto_menu"
     set mainmenu_keycode[7]=101
-    set mainansi_caption[7]="Select ^[1mE^[37mnvironment Boot..."
+    set mainansi_caption[7]="Seleziona ^[1mA^[37mbiente Boot..."
 
     s" chain_disk" getenv? [if]
 	set mainmenu_caption[8]="Chain[L]oad ${chain_disk}"
