--- a/stand/defaults/loader.conf
+++ b/stand/defaults/loader.conf
@@ -160,9 +160,11 @@ loader_color="YES"
 boot_mute="YES"
 loader_logo="Firew4llbw"
 loader_brand="Firew4ll"
-splash_bmp_load="YES"		# Set this to YES for bmp splash screen!
-bitmap_load="YES"
-bitmap_name="/usr/local/www/Firew4ll.bmp"
+#splash_bmp_load="YES"		# Set this to YES for bmp splash screen!
+#bitmap_load="YES"
+#bitmap_name="/usr/local/www/Firew4ll.bmp"
 vesa_load="YES"
 hw.usb.no_pf="1"
 net.isr.maxthreads="-1"
+i915kms_load="YES"
+kern.vt.fb.default_mode="800x600"
