--- a/stand/defaults/loader.conf
+++ b/stand/defaults/loader.conf
@@ -21,8 +21,8 @@ verbose_loading="NO"		# Set to YES for verbose loader output
 
 ###  Splash screen configuration  ############################
 
-splash_pcx_load="NO"		# Set this to YES for pcx splash screen!
-splash_txt_load="NO"		# Set this to YES for TheDraw splash screen!
+#splash_pcx_load="NO"		# Set this to YES for pcx splash screen!
+#splash_txt_load="NO"		# Set this to YES for TheDraw splash screen!
 #vesa_load="NO"			# Set this to YES to load the vesa module
 #bitmap_load="NO"		# Set this to YES if you want splash screen!
 #bitmap_name="splash.bmp"	# Set this to the name of the file
@@ -163,8 +163,8 @@ loader_brand="Firew4ll"
 #splash_bmp_load="YES"		# Set this to YES for bmp splash screen!
 #bitmap_load="YES"
 #bitmap_name="/usr/local/www/Firew4ll.bmp"
-vesa_load="YES"
-hw.usb.no_pf="1"
-net.isr.maxthreads="-1"
-i915kms_load="YES"
-kern.vt.fb.default_mode="800x600"
+#vesa_load="YES"
+#hw.usb.no_pf="1"
+#net.isr.maxthreads="-1"
+#i915kms_load="YES"
+#kern.vt.fb.default_mode="800x600"
